Merged trunk changes into "deltaSet" branch